A mojo for committing updated assets